# ledger-banking-app

./: README.md  render.yaml
.github/workflows/: deploy-pages.yml
backend/: .dockerignore  .gitignore  Dockerfile  banking-backend.cabal
backend/app/: Main.hs
backend/src/Banking/: Api.hs  Types.hs  Validation.hs
backend/test/: Spec.hs
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: transactions.ts
frontend/src/features/transactions/: TransactionForm.tsx  TransactionJournal.tsx  TransactionReceipt.tsx  transactionsSlice.ts  types.ts
frontend/src/styles/: index.css
